# Master.Thesis

./: .gitignore  .gitlab-ci.yml  README.md
RvizConfig/: Gazebo_lasertracking.rviz
docs/: README.md  latexmkrc  makefile
docs/expose/: content.tex  main.tex  metadata.tex  style.tex
docs/expose/backmatter/: bibliography.bib
docs/expose/frontmatter/: 1_info.tex
docs/expose/mainmatter/: 1_goal.tex  2_related.tex  3_approach.tex
docs/src/: dot.dot
fusion-tracker/: Gazebo.pose.py  evaluation_fusion_gazebo.py  evaluation_fusion_realworld.py  laser_tracking_fusion_gazebo.py  laser_tracking_fusion_realworld.py  ptrackerlib.py  trans.py
fusion-tracker/groundtruth/: crossing.txt  crossing2.txt  fix_follow_corner_box2.txt  fix_follow_down.txt  fix_follow_s.txt  read.py  walking.txt
gazebo_gui/: CMakeLists.txt  gazebo_sim_gui.cc  gazebo_sim_gui.hh  package.xml
gazebo_sim_walk/: CMakeLists.txt  package.xml
gazebo_sim_walk/gazebomodel/walker/: model.config  model.sdf
gazebo_sim_walk/include/gazebo_sim_walk/: ActorPluginRos.hpp  cml_randomizer.h  commands.hpp  operator.hpp  random_walker.hpp  rcsim_carry_my_luggage.h  sdf_util.hpp  task_config.h  task_setup.h
gazebo_sim_walk/launch/: gzclient.launch  gzserver.launch  sim_walk.launch
gazebo_sim_walk/src/: cml_randomizer.cpp  gazebo_sim_gui.cc  gazebo_sim_walk.cpp  operator.cpp  random_walker.cpp  task_config.cpp  task_setup.cpp
gazebo_sim_walk/worlds/: TrialWorld.world
rosbag_eva/: Evaluation_Gazebo_AVG_Vals.txt
test/: CMakeLists.txt  package.xml
test/config/: furnished_clf.world  furnished_clf_with_actor.world  protoconfig.rviz
test/launch/: bringup.launch  lasersc.launch  sim.launch  upload.launch
tiago_description/robots/: tiago.urdf.xacro
tiago_description/urdf/end_effector/: end_effector.urdf.xacro
